# frontend-practice

./: .gitignore  README.md  db.json  makefile  package.json  pnpm-lock.yaml
backend/: README.md  pyproject.toml
backend/src/: main.py  settings.py
backend/src/auth/api/: __init__.py  schemas.py
backend/src/auth/application/: login.py  ports.py  signup.py
backend/src/auth/application/dto/: jwt.py  user.py
backend/src/auth/infrastructure/: db.py  models.py
backend/src/auth/infrastructure/adapters/: __init__.py  jwt.py  pwd.py  user.py
backend/src/auth/infrastructure/di/: ioc.py  provider.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2026_05_04_2154-3b06c06f5304_init.py
src/: main.tsx
src/features/auth/api/: authApi.ts
src/features/auth/hooks/: useAuth.ts
src/features/auth/types/: schema.ts  std.ts
src/features/auth/ui/: SignupForm.tsx
src/features/posts/api/: postApi.ts
src/features/posts/hooks/: usePosts.ts
src/features/posts/types/: schema.ts  std.ts
src/features/posts/ui/: CreatePost.tsx  PostCard.tsx  PostForm.tsx  PostList.tsx
src/pages/: PostPage.tsx  SignUpPage.tsx
src/shared/lib/api/: http.ts  interceptors.ts  types.ts
